--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="C:\Users\azizb\Documents\udemy website\aziz's website\CSS - My Site Images\cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="\CSS - My Site Images\cloud.png" alt="cloud-img">
         <img class="sun" src="https://cdn-icons-png.flaticon.com/512/979/979585.png" alt="sun-img">
         <h1> I'm Med Aziz.</h1>
         <h2>And this is my first website .</h2>  
-        <img class="montain" src="C:\Users\azizb\Documents\udemy website\aziz's website\CSS - My Site Images\mountain.png" alt="mountain-img">
-        <img id="bottom-cloud" src="C:\Users\azizb\Documents\udemy website\aziz's website\CSS - My Site Images\cloud.png" alt="cloud-img">
+        <img class="montain" src="\CSS - My Site Images\mountain.png" alt="mountain-img">
+        <img id="bottom-cloud" src="\CSS - My Site Images\cloud.png" alt="cloud-img">
     </div>
     <div class="midd-container">
         <div class="profile">
