--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bannour Med Aziz</title>
     <link rel="stylesheet" href="CSS\styles.css">
-    <link rel="icon" href="\favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="\CSS - My Site Images\cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="CSS - My Site Images\cloud.png" alt="cloud-img">
         <img class="sun" src="https://cdn-icons-png.flaticon.com/512/979/979585.png" alt="sun-img">
         <h1> I'm Med Aziz.</h1>
         <h2>And this is my first website .</h2>  
-        <img class="montain" src="\CSS - My Site Images\mountain.png" alt="mountain-img">
-        <img id="bottom-cloud" src="\CSS - My Site Images\cloud.png" alt="cloud-img">
+        <img class="montain" src="CSS - My Site Images\mountain.png" alt="mountain-img">
+        <img id="bottom-cloud" src="CSS - My Site Images\cloud.png" alt="cloud-img">
     </div>
     <div class="midd-container">
         <div class="profile">
